--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color: rgb(255, 0, 0); text-align: center;">saba git2</h1>
+    <h1 style="color: rgb(255, 0, 0); text-align: center;;font-size: large;">saba git2</h1>
     <h2>bahar2 git !!shah</h2>
 </body>
 </html>
